rework pom.xml - add junit-jupiter